--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,16 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- MINHAS CORES -->
+    <!-- verde que será usado -->
+    <color name="background_splash_screen">#B936FF7E</color>
+    <!-- Verde toolbar-->
+    <color name="verde_primary">#21C15F</color>
+    <!-- verde mais escuro que o verde principal -->
+    <color name="verde_status_bar">#009837</color>
+    <!-- verde do picpay -->
+    <color name="cor_verde">#11C770</color>
 </resources>
